--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^17.0.10",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^1.3.4",
+    "eruda": "^2.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.4.2",
@@ -26,7 +29,8 @@
     "workbox-range-requests": "^6.4.2",
     "workbox-routing": "^6.4.2",
     "workbox-strategies": "^6.4.2",
-    "workbox-streams": "^6.4.2"
+    "workbox-streams": "^6.4.2",
+    "zustand": "^4.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
