--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "eruda": "^2.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.4.2",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.4.2",
     "workbox-broadcast-update": "^6.4.2",
@@ -36,7 +36,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "typescript": "typescript"
   },
   "eslintConfig": {
     "extends": [
